<?xml version="1.0"?>
<package>
  <name>config</name>
  <version>1.0.0</version>
  <description>The config package</description>
  <maintainer email="pinkie.fu@ubtrobot.com">pinkie.fu</maintainer>
  <author email="pinkie.fu@ubtrobot.com">pinkie.fu</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>log</build_depend>
  <build_depend>jsoncpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>log</run_depend>
  <run_depend>jsoncpp</run_depend>
</package>
